--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "pangu": "^3.2.1",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "sequelize": "^3.23.6",
+    "sqlite3": "^3.1.4"
   }
 }
